security/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Privileged containers have access to all host devices and can easily break out
      of isolation boundaries.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - catdog-platform
      validate:
        message: "Privileged containers are strictly disallowed."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
