security/kyverno/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits-requests
  annotations:
    policies.kyverno.io/title: Require CPU/Memory Limits and Requests
    policies.kyverno.io/category: Best Practices & Reliability
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - catdog-platform
      validate:
        message: "CPU and Memory requests and limits are mandatory for all production containers."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
